more changes needed for navbar function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="#Gmail">Gmail</a></li>
         <li><a href="#Images">Images</a></li>
-        <li><a class="expaned-apps" href="https://www.google.com/intl/en/options/" title="Google apps" arial-expanded="false" role="button"></a></li>
+        <li><a class="expaned-apps" href="https://www.google.com/intl/en/options/" title="Google apps" arial-expanded="false" role="button"><img id="app-launcher" src="apps_256.png" width="16px" height="16px"></a></li>
         <li><a class="sign-in-icon" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"">Sign in</a></li>
       </ul>
     </div>
