google icon and search bar with buttons are done. Need to finish footer bar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<div id=wrapper>
+  <div
+</div>
+
 <head>
   <title>Google</title>
   <meta charset="utf-8">
@@ -22,5 +26,38 @@
       </ul>
     </div>
   </nav>
+	
+	<div class="google-icon">
+	  <img src="googlelogo_color_272x92dp.png" width="272px" height="92px">
+	</div>
+	
+	<div class="search-input">
+	  <form action="#" method="post">
+		  <div class="search-formbox">
+		    <label for="keywords"></label>
+			  <input id="keywords" type="text">
+			</div>
+			<div class="buttons">
+			  <button id="search-submit-button" type="submit">Google Search</button>
+				<button id="have-fun-button" type="button">I'm Feeling Lucky</button>
+			</div>
+		</form>
+	</div>
+	
+	<div id="footer">
+	  <div class="nav-footer">
+	    <div class="nav-footer-left>
+		    <ul>
+			    <li><a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
+				  <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a></li>
+			  </ul>
+		  </div>
+		  <div class="nav-footer-right">
+		
+		  </div>
+	  </div>
+	</div>
 </body>
+
+
 </html>
