footer bar is done. To do: adding responsive

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <li><a href="#Gmail">Gmail</a></li>
         <li><a href="#Images">Images</a></li>
         <li><a class="expaned-apps" href="https://www.google.com/intl/en/options/" title="Google apps" arial-expanded="false" role="button"><img id="app-launcher" src="apps_256.png" width="16px" height="16px"></a></li>
-        <li><a class="sign-in-icon" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/"">Sign in</a></li>
+        <li><a class="sign-in-icon" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/">Sign in</a></li>
       </ul>
     </div>
   </nav>
-	
+
 	<div class="google-icon">
 	  <img src="googlelogo_color_272x92dp.png" width="272px" height="92px">
 	</div>
-	
+
 	<div class="search-input">
 	  <form action="#" method="post">
 		  <div class="search-formbox">
@@ -43,17 +43,19 @@
 			</div>
 		</form>
 	</div>
-	
+
 	<div id="footer">
 	  <div class="nav-footer">
-	    <div class="nav-footer-left>
+	    <div class="nav-footer-left">
 		    <ul>
 			    <li><a href="https://www.google.com/intl/en_us/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a></li>
 				  <li><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a></li>
 			  </ul>
 		  </div>
 		  <div class="nav-footer-right">
-		
+        <li><a href="//www.google.com/intl/en_us/policies/privacy/?fg=1">Privacy</a></li>
+        <li><a href="//www.google.com/intl/en_us/policies/terms/?fg=1">Terms</a></li>
+        <li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
 		  </div>
 	  </div>
 	</div>
